--- a/flask/app/templates/admin/admin_templates/admin_template.html
+++ b/flask/app/templates/admin/admin_templates/admin_template.html
@@ -11,74 +11,73 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <!-- Your custom styles -->
       <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
-    <!-- Used as an example only to position the footer at the end of the page.
-    You can delete these styles or move it to your custom css file -->
-    <style>
-      body {
-        display: flex;
-        min-height: 100vh;
-        flex-direction: column;
-        }
-      main {
-        flex: 1 0 auto;
-      }
-    </style>
   </head>
+  
   <body>
     <header>
-      <nav class="cyan">
-        <div class="nav-wrapper">
-          <div class="container">
-            <a href="#" class="brand-logo">LOGO</a>
-            <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
-            <ul class="right hide-on-med-and-down">
-              <li><a href="#">item1</a></li>
-              <li><a href="#">item2</a></li>
-              <li><a href="#">item3</a></li>
-              <li><a href="#">item4</a></li>
-            </ul>
-            <ul class="side-nav" id="mobile-menu">
-              <li>
-                <div class="userView">
-                  <div class="background">
-                    <img src="http://lorempixel.com/output/abstract-q-c-640-480-10.jpg" alt="Background Sidenav">
-                  </div>
-                  <a href="#!user"><img class="circle" src="http://lorempixel.com/output/people-q-c-640-480-9.jpg" alt="User Image Sidenav"></a>
-                  <a href="#!name"><span class="white-text name">John Doe</span></a>
-                  <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
-                </div>
-              </li>
-              <li><a href="#">item1</a></li>
-              <li><a href="#">item2</a></li>
-              <li><a href="#">item3</a></li>
-              <li><a href="#">item4</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+     <!-- LISTA DESPLEGABLE SERVICIOS -->
+    <ul id="menuServicios" class="dropdown-content">
+      <li><a href="#!">Inventario</a></li>
+      <li><a href="#!">Citas</a></li>
+      <li class="divider"></li>
+      <li><a href="#!">Laboratorio</a></li>
+      <li><a href="#!">Cuentas</a></li>
+    </ul>
+
+    <nav>
+      <div class="nav-wrapper blue lighten-2">
+        <a href="#!" class="brand-logo ">Dental Real</a>
+        <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a class="modal-trigger" href="#modalConfiguracion" >Configuracion</a></li>
+          <li class="divider"></li>
+          <!-- Dropdown Trigger -->
+          <li><a class="dropdown-button" href="#!" data-activates="menuServicios">Servicios<i
+                class="material-icons right">arrow_drop_down</i></a></li>
+        </ul>
+        <ul class="side-nav" id="mobile-menu">
+          <li>
+            <div class="userView">
+              <div class="background">
+                <img src="http://lorempixel.com/output/abstract-q-c-640-480-10.jpg" alt="Background Sidenav">
+              </div>
+              <a href="#!user"><img class="circle" src="http://lorempixel.com/output/people-q-c-640-480-9.jpg"
+                  alt="User Image Sidenav"></a>
+              <a href="#!name"><span class="white-text name">John Doe</span></a>
+              <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
+            </div>
+          </li>
+          <li><a href="#" class="btn modal-trigger">item1</a></li>
+          <li><a href="#">item2</a></li>
+          <li><a href="#">item3</a></li>
+          <li><a href="#">item4</a></li>
+        </ul>
+      </div>
+      </div>
+    </nav>
+
+
+
     </header>
       <main>
-      <!-- Your content here -->
-      <table class="centered">
-          <thead>
-            
-              <tr>
-               
-                  <th data-field="id">{{ llave }}</th>
-                  {% endfor %}     
-              </tr>
-              
-          </thead>
-          <tbody>
-              <tr>
-                
-                  <td></td>
-                {% endfor %} 
-              </tr>
-          </tbody>
-          
-      </table>
+
+        <div id="modalConfiguracion" class="modal">
+          <div class="modal-content">
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+            <p> Sequi a sint suscipit, aliquam quis facere necessitatibus nam, doloremque possimus saepe impedit dolore atque
+              illo!
+              Consequuntur praesentium sit voluptatem debitis voluptatum.
+            </p>
+          </div>
+          <div class="modal-footer">
+            <a href="" class="btn modal-close blue lighten-2">cerrar</a>
+          </div>
+      
+        </div>
     </main>
+
+
+
     <footer class="page-footer cyan">
       <div class="container">
         <div class="row">
