--- a/flask/app/templates/public/user_dashboard.html
+++ b/flask/app/templates/public/user_dashboard.html
@@ -1,7 +1,11 @@
 <!-- HEREDA EL CONETENIDO DE LA PAGINA 'user_template'-->
-{% extends "public/public_templates/user_template.html" %}
+{% extends "public/dashboard_template.html" %}
 
 <!-- REFERENCIA AL CODIGO 'block title' EN LA ETIQUETA 'title' de 'user_template' PERMITE CAMBIAR SU CONTENIDO-->
-{% block title %} Dental Real {% endblock %}
+{% block title %} Dental Real User {% endblock %}
 
-
+{%block main %}
+{%for valor in result %}
+<p>{% print(valor,' : ', result[valor]) %}</p>
+{%endfor%} 
+{%endblock%}
