--- a/flask/app/templates/public/public_templates/user_template.html
+++ b/flask/app/templates/public/public_templates/user_template.html
@@ -21,9 +21,9 @@
     <!-- LISTA DESPLEGABLE SERVICIOS -->
     <ul id="menuServicios" class="dropdown-content">
       <li><a href="#!">Inventario</a></li>
-      <li><a href="#!">Citas</a></li>
+      <li><a href="#!">Citas <span class="new badge" data-badge-caption="Hoy" >{{datos_consultorio.num_citas}}</span></a></li>
       <li class="divider"></li>
-      <li><a href="#!">Laboratorio</a></li>
+      <li><a href="#!">Laboratorio  </a></li>
       <li><a href="#!">Cuentas</a></li>
     </ul>
 
